fixed font-size on mobile

--- a/styles/layout/style.css
+++ b/styles/layout/style.css
@@ -28,7 +28,7 @@ main h1{
 }
 
 .welcome-header{
-  font-size: 4rem;
+  font-size: 3.8rem;
   margin: 0;
   margin-top: 15px;
 }
